add Dockerfile and docker-compose